--- a/style.css
+++ b/style.css
@@ -63,6 +63,12 @@ a{
     gap: 40px;
 }
 
+.presentacion__contenido2 {
+    width: 80%;
+    margin: 0 auto; /* Centra horizontalmente */
+    text-align: center; /* Centra el texto y los elementos inline/inline-block */
+  }  
+
 .presentacion__contenido__titulo {
     font-size: 2.25rem;
     font-family: var(--fuente-krona);
@@ -74,6 +80,15 @@ a{
 }
 
 .presentacion__contenido__texto2 {
+    display: grid;
+    place-items: center;  /* Centrado tanto horizontal como vertical */  
+    font-size: 1.5rem;
+    font-family: var(--fuente-montserrat);
+}
+
+.presentacion__contenido__texto3 {
+    margin-top: 20px;
+    margin-bottom: 20px;
     display: grid;
     place-items: center;  /* Centrado tanto horizontal como vertical */  
     font-size: 1.5rem;
